Use Helidon instead of Micronaut